# cio-lambda-proxy

./: .bandit  .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  anonymous_request.json  authorized_request.json  build-in-docker.sh  build.sh  environment.example  pyproject.toml
cio_lambda_proxy/: auth.py  handler.py  main.py  utils.py
cio_lambda_proxy/utils/: http.py
events/: anonymous-mobile-event.json  app-api-event.json  authorized-mobile-event.json  beta-api-event.json  device-registration-event.json  sample-event.json  track-api-event.json
infra/: iam.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  remote-state.tf  security.tf  variables.tf
infra/policies/: lambda-policy.json  lambda-role.json
tests/: test_auth.py  test_handler.py  test_utils.py
tests/events/: anonymous_request.json  authorized_request.json  device_request.json  track_api_request.json
