[tool.poetry]
name = "cio-lambda-proxy"
version = "0.1.1"
description = "Secure serverless proxy for Customer.io API using AWS Lambda"
authors = ["Sanzhar Makhmut"]
readme = "README.md"
packages = [{include = "cio_lambda_proxy"}]

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"
setuptools = ">=78.1.1"
requests = "^2.31.0"
urllib3 = "^1.26.0"
python-dotenv = "^1.0.0"
boto3 = "^1.28.62"
python-dateutil = "^2.8.2"
pycryptodome = "^3.20.0"
# Replaced cryptography with pycryptodome to avoid GLIBC compatibility issues
# pycryptodome is self-contained and doesn't require cffi

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
cryptography = "^41.0.0"
moto = "^4.2.12"
black = "^24.3.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
bandit = "^1.7.5"
pip-audit = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cio_lambda_proxy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=cio_lambda_proxy --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
